--- a/templates/home.html
+++ b/templates/home.html
@@ -2,9 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <title>60-Second Proposal</title>
+  <title>Create Proposal — Get The Job</title>
+  <link rel="icon" href="/static/favicon.ico">
   <link rel="stylesheet" href="/static/style.css">
 </head>
+
 <body>
 
   <div class="wrap">
@@ -79,6 +81,11 @@
       </main>
 
     </div>
+
+     <!-- Footer -->
+    <footer class="site-footer">
+      © Get The Job
+    </footer>
   </div>
 
 <script>
